feat responsive phone

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="./src/styles/reset.css" />
   <link rel="stylesheet" href="./src/styles/style.css">
   <link rel="stylesheet" href="./src/styles/mobile/celular.css">
-  <!-- <link rel="stylesheet" href="./src/styles/responsive.css"> -->
+  <link rel="stylesheet" href="./src/styles/mobile/tablet.css"> 
+   <!-- <link rel="stylesheet" href="./src/styles/responsive.css"> -->
 
 
   <!-- ICONS -->
@@ -44,15 +45,15 @@
   <main id="hero">
     <div id="opacity">
       <aside id="hero-aside">
-        <h1>Você Sofre com Dores Nas Costas,<br> Estresse ou Lesões?</h1>
-        <p>Conheça o Método Integrado que Está Transformando a Saúde de<br> Quem Mora em São Paulo!</p>
+        <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
+        <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
         <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
       </aside>
     </div>
   </main>
   <section id="tratamentos">
     <aside id="tratamentos-aside">
-      <h1>Tratamentos Avançados para<br>
+      <h1>Tratamentos Avançados para
          Corpo e Mente em Equilíbrio</h1>
       <h2>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</h2>
       <ul id="tratamentos-ul">
@@ -216,7 +217,7 @@
       </div>
       <div class="footer-whatsapp">
         <a href="https://wa.me/5511963571929" target="_blank">
-          <img src="./src/images/icon-whatsapp.svg" alt="WhatsApp" class="whatsapp-icon" />
+          <img src="./src/images/icon-whatsapp-black.svg" alt="WhatsApp" class="whatsapp-icon" />
         </a>
       </div>
     </div>
