feat responsive tablet

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="./src/styles/reset.css" />
   <link rel="stylesheet" href="./src/styles/style.css">
   <link rel="stylesheet" href="./src/styles/mobile/celular.css">
-  <link rel="stylesheet" href="./src/styles/mobile/tablet.css"> 
-   <!-- <link rel="stylesheet" href="./src/styles/responsive.css"> -->
+  <link rel="stylesheet" href="./src/styles/mobile/tablet.css">
+  <!-- <link rel="stylesheet" href="./src/styles/responsive.css"> -->
 
 
   <!-- ICONS -->
@@ -49,12 +49,17 @@
         <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
         <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
       </aside>
+      <section id="hero-section">
+        <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
+        <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
+        <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
+      </section>
     </div>
   </main>
   <section id="tratamentos">
     <aside id="tratamentos-aside">
       <h1>Tratamentos Avançados para
-         Corpo e Mente em Equilíbrio</h1>
+        Corpo e Mente em Equilíbrio</h1>
       <h2>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</h2>
       <ul id="tratamentos-ul">
         <li class="tratamentos-li"><span class="tratamentos-span">Quiropraxia:</span> Realinhamento vertebral para
